---
config:
  theme: base
  themeVariables:
    primaryColor: "#dbeafe"
    primaryTextColor: "#0b2545"
    primaryBorderColor: "#1e40af"
    lineColor: "#1e40af"
    fontFamily: "Inter, Arial, sans-serif"
    fontSize: "14px"
---
erDiagram
    Dim_Time {
        int      Time_Key       PK
        date     Full_Date
        int      Hour
        int      Day
        int      Month
        string   Day_of_Week
        bool     Is_Weekend
        bool     Is_Holiday
    }

    Dim_Location {
        int      Location_ID    PK
        string   Borough
        string   Zone
        string   Service_Zone
    }

    Dim_Service_Type {
        int      Service_Type_Key  PK
        string   Service_Name
        string   Provider_Class
    }

    Dim_Weather {
        int      Weather_Key    PK
        float    Temperature
        float    Precipitation
        string   Condition
    }

    Fact_Trips {
        int      pickup_time_key   FK
        int      dropoff_time_key  FK
        int      pulocationid      FK
        int      dolocationid      FK
        int      service_type_key  FK
        float    distance
        float    fare
        float    duration_minutes
        int      passenger_count
    }

    Fact_Demand_Hourly {
        int      pickup_time_key   PK
        int      pulocationid      PK
        int      service_type_key  PK
        int      total_demand
        float    total_revenue_generated
        float    average_trip_distance
    }

    Dim_Time          ||--o{ Fact_Trips         : "pickup / dropoff"
    Dim_Location      ||--o{ Fact_Trips         : "PU / DO zone"
    Dim_Service_Type  ||--o{ Fact_Trips         : "service"
    Dim_Weather       ||--o{ Fact_Trips         : "exogenous"

    Dim_Time          ||--o{ Fact_Demand_Hourly : "hourly bucket"
    Dim_Location      ||--o{ Fact_Demand_Hourly : "pickup zone"
    Dim_Service_Type  ||--o{ Fact_Demand_Hourly : "service"
    Dim_Weather       ||--o{ Fact_Demand_Hourly : "exogenous"
